syntax = "proto3";
package tendermint.types;

option go_package = "github.com/hyperledger/fabric-droplib/protos/protobufs/types";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "github.com/hyperledger/fabric-droplib/protos/protobufs/types/types.proto";
import "github.com/hyperledger/fabric-droplib/protos/protobufs/types/validator.proto";

message EvidenceProto {
  oneof sum {
    DuplicateVoteEvidenceProto     duplicate_vote_evidence      = 1;
    LightClientAttackEvidenceProto light_client_attack_evidence = 2;
  }
}

// DuplicateVoteEvidence contains evidence of a validator signed two conflicting votes.
message DuplicateVoteEvidenceProto {
  VoteProto     vote_a             = 1;
  VoteProto     vote_b             = 2;
  int64                     total_voting_power = 3;
  int64                     validator_power    = 4;
  google.protobuf.Timestamp timestamp          = 5 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

// LightClientAttackEvidence contains evidence of a set of validators attempting to mislead a light client.
message LightClientAttackEvidenceProto {
  tendermint.types.LightBlockProto conflicting_block            = 1;
  int64                       common_height                = 2;
  repeated tendermint.types.ValidatorProto byzantine_validators = 3;
  int64                               total_voting_power   = 4;
  google.protobuf.Timestamp           timestamp            = 5 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

message EvidenceListProto {
  repeated EvidenceProto evidence = 1 [(gogoproto.nullable) = false];
}
